Fixing a bug of accessibility breaks the dialog layout in IE7.
git-svn-id: http://svn.ckeditor.com/CKEditor/branches/features/aria@4958 da63caf2-3823-0410-a1e8-d69ccee00dfb

--- a/_source/skins/kama/mainui.css
+++ b/_source/skins/kama/mainui.css
@@ -165,6 +165,7 @@ span.cke_skin_kama
 .cke_skin_kama fieldset.cke_voicelabel_invisible
 {
 	height: 100%;
+	position: relative;
 }
 
 .cke_skin_kama legend.cke_voicelabel_invisible
