--- a/_source/skins/office2003/mainui.css
+++ b/_source/skins/office2003/mainui.css
@@ -109,6 +109,7 @@ For licensing, see LICENSE.html or http://ckeditor.com/license
 .cke_skin_office2003 fieldset.cke_voicelabel_invisible
 {
 	height: 100%;
+	position: relative;
 }
 
 .cke_skin_office2003 legend.cke_voicelabel_invisible
