--- a/_source/skins/v2/mainui.css
+++ b/_source/skins/v2/mainui.css
@@ -124,6 +124,7 @@ For licensing, see LICENSE.html or http://ckeditor.com/license
 .cke_skin_v2 fieldset.cke_voicelabel_invisible
 {
 	height: 100%;
+	position: relative;
 }
 
 .cke_skin_v2 legend.cke_voicelabel_invisible
